# infrahub-solution-ai-dc

./: .copier-answers.yml  .dockerignore  .envrc  .gitignore  .graphqlrc.yml  .infrahub.yml  .markdownlint-cli2.yaml  .rumdl.toml  .yamllint.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  flake.nix  pyproject.toml  repository.yml  schema.graphql  tasks.py
.claude/skills/upgrade-infrahub/: SKILL.md
.github/: build-docs.sh  file-filters.yml
.github/workflows/: ci.yml  sync-docs.yml  update-infrahub.yml
.vale/styles/: spelling-exceptions.txt
.vale/styles/Infrahub/: branded-terms-case-swap.yml  sentence-case.yml
docs/: AGENTS.md  demo-guide.mdx  design-driven-automation.mdx  docusaurus.config.ts  generator-patterns.mdx  installation-setup.mdx  modular-generator-architecture.mdx  overview.mdx  package-lock.json  package.json  pnpm-lock.yaml
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-solution-ai-dc-demo-guide-mdx-e04.json  site-docs-solution-ai-dc-design-driven-automation-mdx-f62.json  site-docs-solution-ai-dc-generator-patterns-mdx-34b.json  site-docs-solution-ai-dc-installation-setup-mdx-ec8.json  site-docs-solution-ai-dc-modular-generator-architecture-mdx-254.json  site-docs-solution-ai-dc-overview-mdx-a09.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/p/: solution-ai-dc-222.json
docs/ai-datacenter/: architecture-takeaways.mdx  cabling-indexes.mdx  design-driven.mdx  generators.mdx  getting-started.mdx  index.mdx  schema.mdx
docs/docs/: architecture-takeaways.mdx  cabling-indexes.mdx  design-driven.mdx  getting-started.mdx  index.mdx  schema.mdx  sidebars.ts
docs/docs/solution-ai-dc/: demo-guide.mdx  design-driven-automation.mdx  generator-patterns.mdx  installation-setup.mdx  modular-generator-architecture.mdx  overview.mdx
docs/sidebars/: sidebars-solution-ai-dc.ts
generators/: fabric_generator_query.py  generate_fabric.gql  generate_fabric.py  generate_hall.gql  generate_hall.py  generate_pod.gql  generate_pod.py  generate_rack.gql  generate_rack.py  pod_generator_query.py  rack_generator_query.py
menus/: menu.yml
objects/: 01_groups.yml  02_device_template.yml  02_manufacturer.yml  03_device_type.yml  04_device_template.yml  04_ipam.yml  05_device_type.yml  05_profiles.yml  06_device_template.yml  10_fabric.yml  11_rack.yml  1_groups.yml  20_triggers.yml.save  device_template.yml  fabric.yml  groups.yml  hall.yml  ipam.yml
schemas/: design.yml  device.yml  generator.yml  ipam.yml  logical_design.yml  physical_location.yml
src/infrahub_bundle_dc_ai/: generator.py
src/infrahub_solution_ai_dc/: addressing.py  cabling.py  generator.py
src/solution_ai_dc/: addressing.py  cabling.py  interfaces.py  protocols.py  sorting.py
tests/integration/: test_infrahub.py
tests/unit/: test_cabling.py  test_computed_attribute.py  test_generator.py  test_sorting.py
transforms/: cabling_plan.gql  cabling_plan.py  computed_interface_description.gql  computed_interface_description.py  computed_interface_description_query.py  fabric_cabling_plan_query.py  intf.frag.gql  startup_config.gql
transforms/templates/: intf.j2  startup_config.j2
