[project]
name = "solution-ai-dc"
version = "0.1.0"
description = "Infrahub Repository"
authors = []
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "httpx>=0.28.1",
    "infrahub-sdk[all]>=1.13.1",
    "invoke>=2.2.0",
]

[dependency-groups]
dev = [
    "infrahub-testcontainers>=1.3.0",
    "invoke>=2.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    ".tox",
    ".venv",
    "env",
    "_build",
    "build",
    "dist",
    "examples",
]


[tool.ruff.lint]
preview = true

task-tags = ["FIXME", "TODO", "XXX"]

select = ["ALL"]

ignore = [
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "CPY",    # flake8-copyright
    "T201",   # use of `print`
    "ISC",    # flake8-implicit-str-concat
    "COM812", # missing-trailing-comma
]


#https://docs.astral.sh/ruff/formatter/black/
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["infrahub_sdk", "infrahub_ctl"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.mccabe]
# Target max-complexity=10
max-complexity = 17
