[project]
name = "infrahub-solution-ai-dc"
version = "0.1.0"
description = "Infrahub Solution AI DC"
readme = "README.md"
authors = [{ name = "OpsMill", email = "info@opsmill.com" }]
requires-python = ">=3.11, <3.14"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "infrahub-sdk[all]==1.16.0",
    "infrahub-testcontainers>=1.3.0",
    "invoke>=2.2.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "rumdl>=0.1.20",
    "yamllint>=1.37.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    ".tox",
    ".venv",
    "env",
    "_build",
    "build",
    "dist",
    "examples",
]


[tool.ruff.lint]
preview = true

task-tags = ["FIXME", "TODO", "XXX"]

select = ["ALL"]

ignore = [
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "CPY",    # flake8-copyright
    "T201",   # use of `print`
    "ISC",    # flake8-implicit-str-concat
    "COM812", # missing-trailing-comma

    "PT",
    "ERA001", # commented-out code
    "S101",   # use of assert
    "PLR6301",
    "FBT",
    "G004",   # Logging statement uses f-string
    "PLR",
]


#https://docs.astral.sh/ruff/formatter/black/
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["infrahub_solution_ai_dc"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.mccabe]
# Target max-complexity=10
max-complexity = 17


[tool.rumdl]
disable = ["MD013", "MD025", "MD029", "MD033", "MD036", "MD041"]
exclude = [
    ".claude/",
    ".git/",
    ".kiro/",
    ".mypy_cache/",
    ".ruff_cache/",
    ".venv/",
    "docs/.docusaurus/",
    "docs/build/",
    "docs/node_modules/",
    "docs/README.md",
    "node_modules/",
]
respect_gitignore = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
